zoc/src/syntax_tree/parser/tests/snapshots/kozo__syntax_tree__parser__tests__universe__type1.snap
---
source: src/syntax_tree/parser/tests/universe.rs
expression: "&cst"
---
Universe(
    UniverseLiteral {
        level: 1,
        start: ByteIndex(
            0,
        ),
    },
)
